exports[`test Child node (trusted) 1`] = `
<div
  className="pe-svg   ">
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
      }
    } />
</div>
`;

exports[`test Dark tone class + light tone 1`] = `
<div
  style={
    Object {
      "background": "#fff",
      "padding": "10px",
    }
  }>
  <SVG
    content={
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
          }
        } />
    }
    tone="light" />
</div>
`;

exports[`test Dark tone class + light tone class 1`] = `
<div
  className="pe-light-tone"
  style={
    Object {
      "background": "#fff",
      "padding": "10px",
    }
  }>
  <SVG
    $$typeof={Symbol(react.test.json)}
    children={null}
    props={
      Object {
        "dangerouslySetInnerHTML": Object {
          "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
        },
      }
    }
    type="div" />
</div>
`;

exports[`test Option: SVG as component (JSX) 1`] = `
<SVG>
  <svg
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z" />
  </svg>
</SVG>
`;

exports[`test Option: attribute (trusted) 1`] = `
<div
  className="pe-svg   ">
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
      }
    } />
</div>
`;

exports[`test Option: content (trusted) 1`] = `
<div
  className="pe-svg   ">
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
      }
    } />
</div>
`;

exports[`test Option: content -- dark tone class 1`] = `
<div
  className="pe-svg   ">
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
      }
    } />
</div>
`;

exports[`test Option: style (JSX) 1`] = `
<SVG
  content={
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z" />
    </svg>
  }
  style={
    Object {
      "color": "#EF6C00",
    }
  } />
`;

exports[`test Option: style (color) 1`] = `
<div
  className="pe-svg   "
  style={
    Object {
      "color": "#EF6C00",
    }
  }>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
      }
    } />
</div>
`;

exports[`test Option: svg as content attribute (JSX) 1`] = `
<SVG
  content={
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z" />
    </svg>
  } />
`;

exports[`test Themed (color) -- dark tone class 1`] = `
<div
  className="pe-svg   tests-svg-themed-svg">
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
      }
    } />
</div>
`;

exports[`test Themed (color) 1`] = `
<div
  className="pe-svg   tests-svg-themed-svg">
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
      }
    } />
</div>
`;
